--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "start": "brunch watch --server",
     "build": "brunch build --production"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
+    "waypoints": "^4.0.1"
+  },
   "devDependencies": {
     "auto-reload-brunch": "^2",
     "brunch": "^2",
